package controlleur;

/**
 * The interface Observateur.
 */
public interface Observateur {

    /**
     * Reagir.
     */
    void reagir();
}